--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <body>
   <div id="container">
     <header>
-      <p class="head-line">Sua Proxima Viagem</p>
+      <strong class="head-line">Sua Proxima Viagem:</strong>
       <h1>Conheça Busan</h1>
       <img src="assets/header.jpg" alt="Foto de Busan">
-      <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até
-        tradicionais barracas de comida de rua. Aqui, <br> exploramos a segunda cidade da Coreia do Sul e descobrimos as
+      <p id="description">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até
+        tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as
         suas ofertas culinárias.</p>
     </header>
     <main>
-      <p class="head-line">Para Os Amantes De Historia</p>
+      <strong class="head-line">Para Os Amantes De Historia</strong>
       <h2>Descubra 3 destinos imperdíveis em Busan</h2>
       <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade
         até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as
@@ -41,7 +41,7 @@
           é um dos poucos templos na Coreia construídos à beira-mar – você pode desfrutar de vistas do Mar do Leste de
           um lado e de belas montanhas do outro. </p>
 
-        <p>Bom para:</p>
+        <p class="bold">Bom para:</p>
         <ul>
           <li>História</li>
         </ul>
@@ -54,7 +54,7 @@
           da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem
           preservado da arquitetura da Dinastia Joseon.</p>
 
-        <p>Bom para:</p>
+        <p class="bold">Bom para:</p>
         <ul>
           <li>História</li>
         </ul>
@@ -67,11 +67,11 @@
           confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros
           coreanos no Exhibition Hall of World Model Boats.</p>
 
-        <p>Bom para:</p>
+        <p class="bold">Bom para:</p>
         <ul>
-          <li>Casais</li>
-          <li>Famílias</li>
-          <li>Orçamento</li>
+          <li id="casais">Casais</li>
+          <li id="familias">Famílias</li>
+          <li id="orçamento">Orçamento</li>
         </ul>
       </section>
 
