--- a/index.html
+++ b/index.html
@@ -21,19 +21,24 @@
       <strong class="head-line">Sua Proxima Viagem:</strong>
       <h1>Conheça Busan</h1>
       <img src="assets/header.jpg" alt="Foto de Busan">
-      <p id="description">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até
+      <p id="description">Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de
+        primeira linha até
         tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as
         suas ofertas culinárias.</p>
     </header>
     <main>
-      <strong class="head-line">Para Os Amantes De Historia</strong>
-      <h2>Descubra 3 destinos imperdíveis em Busan</h2>
-      <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade
-        até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo - as
-        famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os
-        amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
-        Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que irá
-        encantar os fotógrafos.</p>
+      <section class="readmi">
+        <strong class="head-line">Para Os Amantes De Historia</strong>
+        <h2>Descubra 3 destinos imperdíveis em Busan</h2>
+        <p>As atrações de Busan vão desde templos budistas centenários que pontilham as montanhas e o litoral da cidade
+          até praias imaculadas com águas cristalinas. Esta cidade litorânea tem muitas coisas para fazer o ano todo -
+          as
+          famílias podem passar o tempo em um aquário à beira-mar, os compradores podem explorar bairros vibrantes e os
+          amantes da natureza podem desfrutar de longas caminhadas até mirantes panorâmicos.
+          Os santuários budistas que pontilham a costa e as montanhas de Busan têm uma arquitetura impressionante que
+          irá
+          encantar os fotógrafos.</p>
+      </section>
       <section class="card">
         <img src="assets/haedong.jpg" alt="foto do Templo Haedong Yonggungsa">
         <h3>1. Templo Haedong Yonggungsa </h3>
@@ -59,8 +64,8 @@
           <li>História</li>
         </ul>
       </section>
-      <section class="card">
-        <img src="assets/yongdusan.jpg" alt="fot do Parque Yongdusan">
+      <section id="youngdusan" class="card">
+        <img src="assets/youngdusan.jpg" alt="fot do Parque Yongdusan">
         <h3>3. Parque Yongdusan</h3>
         <p>O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade.
           Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus –
@@ -75,7 +80,9 @@
         </ul>
       </section>
 
-      <p>As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia.
+
+      <p class="readmi2">As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto
+        marítimo na Ásia.
         Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de
         diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
     </main>
