--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -86,6 +87,10 @@
         Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de
         diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo. </p>
     </main>
+
+    <footer>
+      Feito com <img id="heart" src="assets/ph_heart-fill.svg" alt="imagen de um coração"> pela Rocketseat
+    </footer>
   </div>
 </body>
 
